UI dialog buttons spacing fix

--- a/Root/CSS/Base/Message_dialog.css
+++ b/Root/CSS/Base/Message_dialog.css
@@ -23,17 +23,27 @@
 	text-align: center;
 }
 
+.message_dialog_body {
+	padding: 0 20px 20px;
+}
+
 .message_dialog_control {
 	margin-left: auto;
 	margin-right: auto;
 	text-align: center;
+	min-height: 34px;
+	float: right;
+	position: relative;
+	left: -50%;
+	text-align: left;
 }
 
 .message_dialog_control button {
-	min-width: 80px;
+	min-width: 100px;
 	font-size: larger;
+	margin: 2px 8px 10px;
 	padding: 8px 14px;
-	margin-bottom: 10px;
-	margin-left: 14px;
 	color: #69B7CF;
+	position: relative;
+	left: 50%;
 }
