--- a/Root/CSS/Component/Root/Base/Location_prompt_narrow.css
+++ b/Root/CSS/Component/Root/Base/Location_prompt_narrow.css
@@ -1,10 +1,5 @@
 @media (max-width: 512px) {
 
-	.message_dialog_control {
-		width: 192px;
-		min-height: 34px;
-	}
-
 	#locate_right_message_yes {
 		float: right;
 	}
